# filerskeepers-project

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
assets/: sample_daily_report.json
bookstoscrape/: settings.py
bookstoscrape/api/: main.py  models.py  utils.py
bookstoscrape/api/models/: auth.py  book.py
bookstoscrape/api/routers/: auth.py  book.py
bookstoscrape/crawler/: exceptions.py  fetch.py  main.py  manager.py  models.py  process.py  settings.py  utils.py
bookstoscrape/scheduler/: job.py  main.py
bookstoscrape/tests/: crawler.py  test.py
bookstoscrape/utils/: api.py  common.py  crawler.py  fetch.py  manager.py  models.py  process.py  scheduler.py
bookstoscrape/utils/crawler/: fetch.py  manager.py  process.py
